Adjust CSS to fix desktop alignment

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ button {
     .buttons-container {
         margin-top: 50px;
         gap: 50px;
-        width: 20%;
     }
 } 
 
